--- a/data/plugin_prism/defaults.toml
+++ b/data/plugin_prism/defaults.toml
@@ -1,59 +1,59 @@
 # The color scheme to use. (moondeer, default, dark, coy, funky, okaidia, solarized-light, twilight, tomorrow-night)
-theme = "moondeer"
+Theme = "moondeer"
 
 # The font-size parameter gets inserted into the partial injected into the page <head>. Rather than maintain a bunch of stylesheets (and in order to parameterize it), I chose to set the size here and slap on !important.
-font-size = "0.5rem"
+FontSize = "0.5rem"
 
 # true to link minified versions of scripts and stylesheets.
-minify = true
+Minify = true
 
 # true to include line numbers unless specified otherwise upon invocation.
-line-numbers = false
+LineNumbers = false
 
 # false to disable all toolbar dependent plugins.
-toolbar = true
+EnableToolbar = true
 
 # true to soft wrap long lines of code, false to scroll them.
-soft-wrap = true
+SoftWrap = false
 
 # true to show the toolbar item displaying the name of the language.
-show-language = true
+ShowLanguage = true
 
 # true to show the toolbar item for copying the code.
-copy-button = true
+CopyButton = true
 
 # true to retain <mark> tags within the highlighted code.
-keep-markup = true
+KeepMarkup = true
 
 # true to turn off whitespace management for code blocks.
-preserve-whitespace = false
+PreserveWhitespace = false
 
 # Settings to pass through to the Normalize Whitespace plugin.
-[whitespace-settings]
+[WhitespaceSettings]
 
 # Removes trailing whitespace on all lines.
-remove-trailing = true
+RemoveTrailing = true
 
 # If the whole code block is indented too much it removes the extra indent.
-remove-indent = true
+RemoveIndent = true
 
 # Removes all whitespace from the top of the code block.
-left-trim = true
+LeftTrim = true
 
 # Removes all whitespace from the bottom of the code block.
-right-trim = true
+RightTrim = true
 
 # Simple way of breaking long lines at a certain length (default is 80 characters).
-#break-lines = 80
+# BreakLines = 80
 
 # Adds a certain number of tabs to every line.
-#indent = 2
+# Indent = 2
 
 # Less aggressive version of left-trim. It only removes a single line feed from the top of the code block.
-#remove-initial-line-feed = false
+# RemoveInitialLineFeed = false
 
 # Converts all tabs to a certain number of spaces (default is 4 spaces).
-#tabs-to-spaces = 4
+# TabsToSpaces = 4
 
 # Converts a certain number of spaces to a tab (default is 4 spaces).
-#spaces-to-tabs = 4
+# SpacesToTabs = 4
